--- a/WebContent/console/welcome.html
+++ b/WebContent/console/welcome.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <div id="main" class="rimmed">
-	<h1><font size="+2">欢迎使用 亿订通 - 无线智能订货会管理系统</font><br/> <em> —— 四海一家的无线订货会解决方案</em></h1>
+	<h1>
+		<font size="+2"> AccountingEx&trade; ¥. 账务速记 </font><br/>
+		<em> - ... 开箱即得的云端快捷帐务解决方案 ... - </em>
+	</h1>
 	<div class="floatLeft" style="background-color:#e1e9ff;height:500px;">
         <h3>文档指南</h3>
         <div class="left">
