--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<link rel="shortcut icon" href="favicon.ico" >
+	<link rel="icon" href="animated_favicon.gif" type="image/gif" >
 	<title>账务速记 .¥ AccountingExpress&trade;</title>
 	<link href="generic/css/basic.css" rel="stylesheet" type="text/css" />
 	<link href="generic/ui/css/ui.css" rel="stylesheet" type="text/css" />
@@ -57,7 +59,7 @@
 <div id="main" class="rimmed">
 	<div>
 	<h1> AccountingEx&trade; ¥. 账务速记 </h1>
-	<h3><em> - ... 轻松 快捷 实时 方便 ... - </em></h3>
+	<h3><em> - ... 开箱即得的云端快捷帐务解决方案 ... - </em></h3>
 	</div>
 	<div id="sign" class="rimmed hidden">
 		<p>
