--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -75,8 +75,8 @@
 <div id="top" class="blueBar"><a href="index.html">主页</a></div>
 <div id="main" class="rimmed">
 	<div>
-	<h1> 欢迎注册 </h1>
-	<h3><em> - 注册后即可给您的同学写下真挚的寄语 ... ...</em></h3>
+	<h1> 欢迎注册</h1>
+	<h3><em> - ... 开箱即得的云端快捷帐务解决方案 ... -</em></h3>
 	</div>
 	<div id="sign" class="rimmed hidden">
 		<p>
