completing catering bill

--- a/WebContent/pages/home.html
+++ b/WebContent/pages/home.html
@@ -30,7 +30,7 @@
 		    });
 		    
 			$("#msgs").fadeIn("slow");
-			$("#footer").slideDown("1000");
+			$("#footer").slideDown("slow");
 		});
 		
 	</script>
